Some more styling done on home page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="This is a The-Mind-Map to help Sherlock Holmes organize his clues">
 </head>
 <body>
+    <img src="assets/images/background-img.jpg" alt="">
     <div class="head">The-Mind-Map</div>
     <nav>
         <ul>
@@ -31,6 +32,6 @@
         <div class="NewIdea box">New Idea</div>
         <div class="todoList box">To-do List</div>
     </div>
-
+</img>
 </body>
 </html>
