Uploading login page

--- a/people_tracker/ppl.html
+++ b/people_tracker/ppl.html
@@ -1,5 +1,12 @@
 <!-- New Idea: GPS Tracker -->
 <!-- map loaction marker -->
+<!-- checkbox -->
+<!-- Printout map markings made -->
+<!-- epic animation-->
+<!-- per  day counter -->
+<!-- pin -->
+<!-- to do list -->
+<!-- dashboard -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
